@@ -25,7 +25,7 @@
 //     http://www.fltk.org/str.php
 //
 
-// generated by Fast Light User Interface Designer (fluid) version 1.0107
+// generated by Fast Light User Interface Designer (fluid) version 1.0108
 
 #ifndef Fl_Help_Dialog_H
 #define Fl_Help_Dialog_H
@@ -37,11 +37,11 @@
 #include <FL/Fl_Input.H>
 
 class FL_EXPORT Fl_Help_Dialog {
-  int index_;
-  int max_;
-  int line_[100];
-  char file_[100][256];
-  int find_pos_;
+  int index_; 
+  int max_; 
+  int line_[100]; 
+  char file_[100][256]; 
+  int find_pos_; 
 public:
   Fl_Help_Dialog();
 private:
