@@ -25,7 +25,7 @@
 //     http://www.fltk.org/str.php
 //
 
-// generated by Fast Light User Interface Designer (fluid) version 1.0107
+// generated by Fast Light User Interface Designer (fluid) version 1.0108
 
 #include "../FL/Fl_Help_Dialog.H"
 #include "flstring.h"
@@ -154,72 +154,61 @@ void Fl_Help_Dialog::cb_find_(Fl_Input* o, void* v) {
 }
 
 Fl_Help_Dialog::Fl_Help_Dialog() {
-  Fl_Double_Window* w;
-  { Fl_Double_Window* o = window_ = new Fl_Double_Window(530, 385, "Help Dialog");
-    w = o;
-    o->user_data((void*)(this));
-    { Fl_Help_View* o = view_ = new Fl_Help_View(10, 10, 510, 330);
-      o->box(FL_DOWN_BOX);
-      o->color(FL_BACKGROUND_COLOR);
-      o->selection_color(FL_SELECTION_COLOR);
-      o->labeltype(FL_NORMAL_LABEL);
-      o->labelfont(0);
-      o->labelsize(14);
-      o->labelcolor(FL_FOREGROUND_COLOR);
-      o->callback((Fl_Callback*)cb_view_);
-      o->align(FL_ALIGN_TOP);
-      o->when(FL_WHEN_RELEASE);
-      o->end();
-      Fl_Group::current()->resizable(o);
-    }
+  { window_ = new Fl_Double_Window(530, 385, "Help Dialog");
+    window_->user_data((void*)(this));
+    { view_ = new Fl_Help_View(10, 10, 510, 330);
+      view_->box(FL_DOWN_BOX);
+      view_->callback((Fl_Callback*)cb_view_);
+      Fl_Group::current()->resizable(view_);
+    } // Fl_Help_View* view_
     { Fl_Group* o = new Fl_Group(10, 348, 510, 27);
       { Fl_Button* o = new Fl_Button(456, 350, 64, 25, "Close");
         o->callback((Fl_Callback*)cb_Close);
         o->label(fl_close);
-      }
-      { Fl_Button* o = back_ = new Fl_Button(386, 350, 25, 25, "@<-");
-        o->tooltip("Show the previous help page.");
-        o->shortcut(0xff51);
-        o->labelcolor((Fl_Color)2);
-        o->callback((Fl_Callback*)cb_back_);
-      }
-      { Fl_Button* o = forward_ = new Fl_Button(421, 350, 25, 25, "@->");
-        o->tooltip("Show the next help page.");
-        o->shortcut(0xff53);
-        o->labelcolor((Fl_Color)2);
-        o->callback((Fl_Callback*)cb_forward_);
-      }
-      { Fl_Button* o = smaller_ = new Fl_Button(316, 350, 25, 25, "F");
-        o->tooltip("Make the help text smaller.");
-        o->labelfont(1);
-        o->labelsize(10);
-        o->callback((Fl_Callback*)cb_smaller_);
-      }
-      { Fl_Button* o = larger_ = new Fl_Button(351, 350, 25, 25, "F");
-        o->tooltip("Make the help text larger.");
-        o->labelfont(1);
-        o->labelsize(16);
-        o->callback((Fl_Callback*)cb_larger_);
-      }
+      } // Fl_Button* o
+      { back_ = new Fl_Button(386, 350, 25, 25, "@<-");
+        back_->tooltip("Show the previous help page.");
+        back_->shortcut(0xff51);
+        back_->labelcolor((Fl_Color)2);
+        back_->callback((Fl_Callback*)cb_back_);
+      } // Fl_Button* back_
+      { forward_ = new Fl_Button(421, 350, 25, 25, "@->");
+        forward_->tooltip("Show the next help page.");
+        forward_->shortcut(0xff53);
+        forward_->labelcolor((Fl_Color)2);
+        forward_->callback((Fl_Callback*)cb_forward_);
+      } // Fl_Button* forward_
+      { smaller_ = new Fl_Button(316, 350, 25, 25, "F");
+        smaller_->tooltip("Make the help text smaller.");
+        smaller_->labelfont(1);
+        smaller_->labelsize(10);
+        smaller_->callback((Fl_Callback*)cb_smaller_);
+      } // Fl_Button* smaller_
+      { larger_ = new Fl_Button(351, 350, 25, 25, "F");
+        larger_->tooltip("Make the help text larger.");
+        larger_->labelfont(1);
+        larger_->labelsize(16);
+        larger_->callback((Fl_Callback*)cb_larger_);
+      } // Fl_Button* larger_
       { Fl_Group* o = new Fl_Group(10, 350, 296, 25);
         o->box(FL_DOWN_BOX);
         o->color(FL_BACKGROUND2_COLOR);
-        { Fl_Input* o = find_ = new Fl_Input(35, 352, 268, 21, "@search");
-          o->tooltip("find text in document");
-          o->box(FL_FLAT_BOX);
-          o->labelsize(13);
-          o->callback((Fl_Callback*)cb_find_);
-          o->when(FL_WHEN_ENTER_KEY_ALWAYS);
-          Fl_Group::current()->resizable(o);
-        }
+        { find_ = new Fl_Input(35, 352, 268, 21, "@search");
+          find_->tooltip("find text in document");
+          find_->box(FL_FLAT_BOX);
+          find_->labelsize(13);
+          find_->callback((Fl_Callback*)cb_find_);
+          find_->when(FL_WHEN_ENTER_KEY_ALWAYS);
+          Fl_Group::current()->resizable(find_);
+        } // Fl_Input* find_
         o->end();
         Fl_Group::current()->resizable(o);
-      }
+      } // Fl_Group* o
       o->end();
-    }
-    o->size_range(260, 150);
-    o->end();
-  }
+    } // Fl_Group* o
+    window_->size_range(260, 150);
+    window_->end();
+  } // Fl_Double_Window* window_
   back_->deactivate();
 forward_->deactivate();
 
