@@ -1,11 +1,13 @@
 CHANGES IN FLTK 1.1.8
 
+	- Documentation fixes (STR #1454, STR #1455, STR #1456,
+	  STR #1457, STR #1458, STR #1460, STR #1481)
+	- Added Fl::scrollbar_size() methods that are used by all
+	  of the scrollbar-using widgets (STR #1500)
 	- fl_read_image() was broken on Intel-based Macs (STR
 	  #1490)
 	- Fl_Progress was using the wrong width to calculate 
 	  progress (STR #1492)
-	- Documentation fixes (STR #1454, STR #1455, STR #1456,
-	  STR #1457, STR #1458, STR #1460, STR #1481)
 	- Fl::x(), Fl::y(), Fl::w(), and Fl::h() did not report
 	  the desktop work area on X11 (STR #1482)
 	- Shortcut events could be sent to the wrong window (STR
